generated/checkers/gen/AllGen-Null-Pointer-Dereference-2e29b9971ac54dec88baa58856a230ec2f2a2dff/build_logs/syntax-repair-08/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static const clang::Expr* {anonymous}::SAGenTestChecker::extractCheckedExprForNull(const clang::Expr*, clang::ento::CheckerContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:89:37: error: binding reference of type ‘clang::ASTContext&’ to ‘const clang::ASTContext’ discards qualifiers
   89 |       bool LNull = isNullLiteral(L, ACtx);
      |                                     ^~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:61:65: note:   initializing argument 2 of ‘static bool {anonymous}::SAGenTestChecker::isNullLiteral(const clang::Expr*, clang::ASTContext&)’
   61 | bool SAGenTestChecker::isNullLiteral(const Expr *E, ASTContext &ACtx) {
      |                                                     ~~~~~~~~~~~~^~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:90:37: error: binding reference of type ‘clang::ASTContext&’ to ‘const clang::ASTContext’ discards qualifiers
   90 |       bool RNull = isNullLiteral(R, ACtx);
      |                                     ^~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:61:65: note:   initializing argument 2 of ‘static bool {anonymous}::SAGenTestChecker::isNullLiteral(const clang::Expr*, clang::ASTContext&)’
   61 | bool SAGenTestChecker::isNullLiteral(const Expr *E, ASTContext &ACtx) {
      |                                                     ~~~~~~~~~~~~^~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:61:6: warning: ‘static bool {anonymous}::SAGenTestChecker::isNullLiteral(const clang::Expr*, clang::ASTContext&)’ defined but not used [-Wunused-function]
   61 | bool SAGenTestChecker::isNullLiteral(const Expr *E, ASTContext &ACtx) {
      |      ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
